[gd_scene load_steps=4 format=3 uid="uid://c8v4h1sdtyhps"]

[ext_resource type="Script" path="res://scripts/ui/hud_controller.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbg"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.85)
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6
corner_radius_top_left = 6
corner_radius_top_right = 6
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0705882, 0.458824, 0.172549, 0.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfill"]
bg_color = Color(0.14902, 0.74902, 0.301961, 1)
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6
corner_radius_top_left = 6
corner_radius_top_right = 6

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PauseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 26)
layout_mode = 2
max_value = 100.0
value = 100.0
theme_override_styles/background = SubResource("StyleBoxFlat_hbg")
theme_override_styles/fill = SubResource("StyleBoxFlat_hfill")
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 18
